# wallet

./: .env  .env.example  .gitignore  .gitmodules  README.md  analysis_options.yaml  justfile  pubspec.yaml
android/: CMakeLists.txt  gradle.properties
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_bridge_template/: MainActivity.kt
assets/: local-share1.json  networks.json
ios/: Podfile.lock.bak
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.freezed.dart  bridge_generated.io.dart  bridge_generated.web.dart  client.dart  deps.dart  executor.dart  ffi.dart  generated_plugin_registrant.dart  keygen.dart  main.dart  sign.dart  state.dart  tookey_transaction.dart  tookey_transaction.g.dart
lib/models/: key_session.dart  key_session.g.dart
lib/pages/: auth.dart  auth.page.dart  export-key.dialog.dart  home_page.dart  key_import.dart  key_list.dart  qr_scanner.dart  sign.test.page.dart  wallet_connect.dart
lib/pages/key/: key.card.dart  key.page.dart  key.popup.dart
lib/pages/keys/: key_import.dialog.dart  keygen.dialog.dart  keygen_form.dialog.dart  keys.page.dart  keys.popup.dart
lib/pages/wallet_connect/: wallet_connect.page.dart  wallet_connect_session.dialog.dart  wallet_connect_sign.dialog.dart
lib/services/: backend_client.dart  backend_client.g.dart  cache.dart  details.dart  executor.dart  executor.g.dart  key_import.dart  keygen.dart  networks.dart  networks.g.dart  qr_scanner.dart  room_client.dart  room_client.g.dart  signer.dart  signer.g.dart
lib/services/http_client/: http_client.dart
lib/services/http_client/src/: http_client_base.dart  http_client_exceptions.dart
lib/services/wallet_connect/: dialog_title.dart  session_dialog.dart  sign_dialog.dart  wallet_connect.dart
lib/widgets/: active_session_button.dart  toaster.dart  wallet_connect_form.dart
lib/widgets/details/: message_details.dart  method_call.dart  method_call_parameter.dart  method_signature.dart  transaction_details.dart
lib/widgets/details/fields/: any_address.dart  token_address.dart
lib/widgets/details/fields/types/: link_info.dart  link_info.g.dart  token_info.dart  token_info.g.dart
lib/widgets/dialog/: dialog_button.dart  dialog_progress.dart  dialog_title.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml  rustfmt.toml
native/native.xcodeproj/: project.pbxproj
native/native.xcodeproj/xcuserdata/aler.xcuserdatad/xcschemes/: xcschememanagement.plist
native/native.xcodeproj/xcuserdata/tema.xcuserdatad/xcschemes/: xcschememanagement.plist
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.rs.bal  bridge_generated.web.rs  ethers.rs  global.rs  lib.rs  logger.rs
native/src/ecdsa/: mod.rs  signer.rs
test/: details_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
