[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "bigint", "ecdsa" ]
ecdsa = [ "tss_ceremonies/ecdsa" ]
gmp = [ "curv-kzen/rust-gmp-kzen", "tss/gmp", "tss_ceremonies/gmp", "tookey_adapter_ethereum/gmp" ]
bigint = ["curv-kzen/num-bigint", "tss/bigint", "tss_ceremonies/bigint", "tookey_adapter_ethereum/bigint" ]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
curv-kzen = { version = "0.9", default-features = false }
futures = "0.3"
flutter_rust_bridge = "1"
round-based = { version = "0.1.4", features = ["dev"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
tookey_adapter_ethereum = { git = "https://github.com/tookey-io/monorep", rev = "f1ab0859d25e513cee872b9592628776c0631a6d", package = "tookey_adapter_ethereum", default-features = false  }
tss = { git = "https://github.com/tookey-io/monorep", rev = "f1ab0859d25e513cee872b9592628776c0631a6d", package = "tss", default-features = false  }
tss_ceremonies = {  git = "https://github.com/tookey-io/monorep", rev = "f1ab0859d25e513cee872b9592628776c0631a6d", package = "tss_ceremonies", default-features = false  }
hex = "0.4.3"