[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.64"
futures = "0.3"
flutter_rust_bridge = "1"
round-based = { version = "0.1.4", features = ["dev"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
hex = "0.4.3"

rlp = "0.5"
web3 = { version = "0.18.0", default_features = false }
tookey-libtss = { version = "1.1", default-features = false, features = ["rust", "bigint"] }
