[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
flutter_rust_bridge = "1"

tookey-libtss = { version = "1.2", default-features = false, features = ["bigint"] }
tookey-libtss-ethereum = { version = "1.2", default-features = false, features = ["rust", "bigint"] }
